@@ -32,10 +32,7 @@ import static com.graphhopper.navigation.DistanceUtils.UnitTranslationKey.*;
 public class DistanceConfig {
     final List<VoiceInstructionConfig> voiceInstructions;
     final DistanceUtils.Unit unit;
-
-    public DistanceConfig(DistanceUtils.Unit unit, TranslationMap translationMap, Locale locale, Profile profile) {
-        this(unit, translationMap, locale, profile.getHints().getString("navigation_transport_mode", ""));
-    }
+    final String mode;
 
     public DistanceConfig(DistanceUtils.Unit unit, TranslationMap translationMap, Locale locale, TransportationMode mode) {
         this(unit, translationMap, locale, mode.name());
@@ -50,48 +47,51 @@ public class DistanceConfig {
             case "mtb":
             case "racingbike":
             case "bike":
-            if (unit == DistanceUtils.Unit.METRIC) {
-                voiceInstructions =  Arrays.asList(
-                    new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{150},
-                        new int[]{150}));
-            } else {
-                voiceInstructions =  Arrays.asList(
-                    new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{150},
-                        new int[]{500}));
-            }
-            break;
+                this.mode = "cycling";
+                if (unit == DistanceUtils.Unit.METRIC) {
+                    voiceInstructions = List.of(
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{150},
+                                    new int[]{150}));
+                } else {
+                    voiceInstructions = List.of(
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{150},
+                                    new int[]{500}));
+                }
+                break;
             case "walking":
             case "walk":
             case "hiking":
             case "hike":
             case "foot":
             case "pedestrian":
-            if (unit == DistanceUtils.Unit.METRIC) {
-                voiceInstructions =  Arrays.asList(
-                    new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{50},
-                        new int[]{50}));
-            } else {
-                voiceInstructions =  Arrays.asList(
-                    new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{50},
-                        new int[]{150}));
-            }
-            break;
+                this.mode = "walking";
+                if (unit == DistanceUtils.Unit.METRIC) {
+                    voiceInstructions = List.of(
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{50},
+                                    new int[]{50}));
+                } else {
+                    voiceInstructions = List.of(
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{50},
+                                    new int[]{150}));
+                }
+                break;
             default:
-            if (unit == DistanceUtils.Unit.METRIC) {
-                voiceInstructions = Arrays.asList(
-                        new InitialVoiceInstructionConfig(FOR_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 4250, 250, unit),
-                        new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 2000, 2),
-                        new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_SINGULAR.metric, translationMap, locale, 1000, 1),
-                        new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{400, 200}, new int[]{400, 200})
-                );
-            } else {
-                voiceInstructions = Arrays.asList(
-                        new InitialVoiceInstructionConfig(FOR_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 4250, 250, unit),
-                        new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_PLURAL.imperial, translationMap, locale, 3220, 2),
-                        new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_SINGULAR.imperial, translationMap, locale, 1610, 1),
-                        new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{400, 200}, new int[]{1300, 600})
-                );
-            }
+                this.mode = "driving";
+                if (unit == DistanceUtils.Unit.METRIC) {
+                    voiceInstructions = Arrays.asList(
+                            new InitialVoiceInstructionConfig(FOR_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 4250, 250, unit),
+                            new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 2000, 2),
+                            new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_SINGULAR.metric, translationMap, locale, 1000, 1),
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.metric, translationMap, locale, new int[]{400, 200}, new int[]{400, 200})
+                    );
+                } else {
+                    voiceInstructions = Arrays.asList(
+                            new InitialVoiceInstructionConfig(FOR_HIGHER_DISTANCE_PLURAL.metric, translationMap, locale, 4250, 250, unit),
+                            new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_PLURAL.imperial, translationMap, locale, 3220, 2),
+                            new FixedDistanceVoiceInstructionConfig(IN_HIGHER_DISTANCE_SINGULAR.imperial, translationMap, locale, 1610, 1),
+                            new ConditionalDistanceVoiceInstructionConfig(IN_LOWER_DISTANCE_PLURAL.imperial, translationMap, locale, new int[]{400, 200}, new int[]{1300, 600})
+                    );
+                }
         }
 
     }
@@ -107,5 +107,12 @@ public class DistanceConfig {
         return instructionsConfigs;
     }
 
+    /**
+     * Returns the Mapbox-compatible mode string for this transportation mode.
+     * @return "cycling" for bike profiles, "walking" for foot profiles, or "driving" for vehicle profiles
+     */
+    public String getMode() {
+        return mode;
+    }
 
 }
